# finch

./: .gitignore  .ruffignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  lint.sh  pyproject.toml
airflow/: Dockerfile  docker-compose.override.yml  pyproject.toml  requirements.txt
airflow/.astro/: config.yaml  test_dag_integrity_default.py
airflow/dags/: auth_helper.py  backfill_historical_data.py  daily_snapshot_pipeline.py  hourly_broker_import.py  intraday_price_refresh.py  orphan_account_cleanup.py  pools_config.py  queries.py  shared_db.py  tase_securities_sync.py
backend/: .env.example  Dockerfile  RECONSTRUCTION_VALIDATION_SUMMARY.md  USD_CASH_DISCREPANCY_ANALYSIS.md  alembic.ini  analyze_cash.py  analyze_ils_conversions.py  backfill_broker_sources.py  backfill_crypto_prices.py  backfill_deposit_prices.py  backfill_historical_settlements.py  backfill_historical_snapshots.py  backfill_kraken_sources.py  backfill_trade_settlements.py  check_btc.py  check_deposits.py  check_forex.py  check_holdings.py  check_ibkr_cash_txns.py  check_missing_settlements.py  check_raw_baby.py  check_raw_strk.py  check_strk.py  debug_kraken.py  delete_duplicate_forex.py  delete_stk_forex.py  fix_etf_classification.py  import_from_xml.py  import_historical_deposits.py  import_historical_forex.py  prepare_reimport.py  pyproject.toml  record_cep_xxi_merger.py  reset_forex.py  reset_kraken.py  test_corporate_actions.py  test_import.py  test_portfolio_value.py  update_asset_names.py  validate_reconstruction.py  (+1 more)
backend/alembic/: env.py
backend/app/: config.py  constants.py  database.py  init_db.py  main.py  rate_limiter.py
backend/data/: Portfolio_Tracker_Query.xml
backend/scripts/: __init__.py  create_service_account.py  migrate_entities_to_portfolios.py  seed_demo_user.py
backend/tests/: conftest.py  test_account_lockout.py  test_account_portfolio.py  test_admin.py  test_asset_type_detector.py  test_auth_dependency.py  test_auth_router.py  test_auth_service.py  test_bank_hapoalim_parser.py  test_base_import_service.py  test_binance_client.py  test_binance_parser.py  test_bit2c_client.py  test_bit2c_parser.py  test_broker_data_delete.py  test_brokers_router.py  test_coingecko_client.py  test_crypto_import_date_range.py  test_cryptocompare_client.py  test_currency_service.py  test_date_range_service.py  test_email_verification.py  test_entity_migration.py  test_historical_data_fetcher.py  test_mfa.py  (+20 more)
(+354 files in other folders)
