[project]
name = "portfolio-tracker-airflow"
version = "0.1.0"
description = "Airflow DAGs for portfolio tracker data pipeline"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade - enforces Python 3.11+ syntax
    "AIR",   # Airflow - enforces Airflow 3 best practices
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Ignore import order in __init__.py files
"__init__.py" = ["F401"]
