[project]

name = "portfolio-tracker-backend"
version = "0.1.0"
description = "Investment portfolio tracking and analytics platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "polars>=0.20.3",
    "yfinance>=0.2.35",
    "requests>=2.31.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "ib_insync>=0.9.86",
    "fastexcel>=0.18.0",  # Required for Polars Excel reading (Meitav, Bit2C imports)
    "pandas_market_calendars>=4.4.0",  # Trading calendar with market holidays
    # Authentication
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "email-validator>=2.1.0",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.26.0",
    "ruff>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade - enforces Python 3.11+ syntax
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
